# robotics-4m20

./: .gitignore  README.md
part0/: package.xml  setup.cfg  setup.py
part0/_python_exercises/: helper.py  numpy_reminder.py  plotting.py  plotting_solution.py  welcome.py  welcome_solution.py
part0/configs/: rviz_config.rviz
part0/launch/: exercise_7_launch.py  hello_world_launch.py  robot_launch.py  rviz_launch.py
part0/part0/: hello_world.py
part0/resource/: ros2control.yml
part0/worlds/: empty_plane_world.wbt  exercise_7_world.wbt
part1/: package.xml  setup.cfg  setup.py
part1/_python_exercises/: kinematics.py  kinematics_bonus.py
part1/configs/: rviz_config.rviz
part1/launch/: localization_launch.py  robot_launch.py  (+3 more)
part2/: package.xml  setup.cfg  setup.py
part2/_python_exercises/: potential_field.py  rrt.py
part2/configs/: rviz_config.rviz  turtlebot3_lds_2d_part2.lua
part2/launch/: cartographer_launch.py  multirobot_launch.py  multirobot_webots_launch.py  potential_field_navigation_launch.py  robot_launch.py  robot_namespace.launch.yaml  rrt_navigation_launch.py  rrt_navigation_robot_launch.py  rviz_launch.py  send_clock_launch.py  slam_launch.py  webots_launch.py
part2/part2/: README.txt  multirobot.py  plot_trajectory.py  potential_field_navigation.py  receive_clock.py  rrt_navigation.py  send_clock.py
part2/resource/: burger.yaml  ros2control.yml  ros2control_robot0.yml  ros2control_robot1.yml  ros2control_robot2.yml  ros2control_robot3.yml  ros2control_robot4.yml  ros2control_robot5.yml
part2/worlds/: empty_plane_world.wbt
(+6 files in other folders)
